--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
+                <inherited>true</inherited>
 				<executions>
 					<execution>
 						<id>validate</id>
