--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <modules>
        <module>chapter_001</module>
 	   <module>puzzle</module>
-        <module>junior</module>
+       <module>chapter_002</module>
     </modules>
 	 
 <dependencies>
