--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <module>chess</module>
         <module>chapter_002</module>
         <module>chapter_003</module>
+		<module>chapter_004</module>
     </modules>
 
     <dependencies>
