--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,8 @@
         <module>chapter_001</module>
         <module>puzzle</module>
         <module>chess</module>
-        <module>chapter_002</module>
+        <module>tictactoe</module>
+		<module>chapter_002</module>
         <module>chapter_003</module>
         <module>chapter_004</module>
     </modules>
