--- a/tictactoe/pom.xml
+++ b/tictactoe/pom.xml
@@ -2,23 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
+   <parent>
         <groupId>ru.job4j</groupId>
         <artifactId>junior</artifactId>
         <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>chess</artifactId>
+   
+    <artifactId>tictactoe</artifactId>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>12</source>
-                    <target>12</target>
+                    <source>11.0</source>
+                    <target>11.0</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+
 </project>
